--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -49,14 +49,17 @@
 -->
 
 </body>
-<script>
-var contextPath='${contextPath!}';
-</script>
+ <script>
+ var contextPath='${contextPath!}';
+ </script>
 <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
 <script src="${contextPath!}/static/js/common.js"></script>
 <script src="${contextPath!}/static/asserts/echarts/echarts-all.js"></script>
+<script src="${contextPath!}/static/asserts/echarts/world.js"></script>
 <script src="${contextPath!}/static/js/flat.js"></script>
 
+<script>
 
+</script>
 
 </html>
