--- a/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
@@ -11,13 +11,16 @@
         }
 
         #sphereMap {
-            height: 100%;
+            height: 95%;
+            /*padding: 2%;*/
         }
     </style>
 
 </head>
 <body>
     <div id="sphereMap"></div>
+    <script>
+    </script>
     <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
     <script src="${contextPath!}/static/js/common.js"></script>
     <script src="${contextPath!}/static/asserts/echarts/echarts.js"></script>
@@ -27,7 +30,8 @@
 
 </body>
 <script>
-var contextPath='${contextPath!}';
+    var contextPath='${contextPath!}';
+
     // 路径配置
     require.config({
         paths: {
