下班前提交

--- a/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
+++ b/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
@@ -28,15 +28,15 @@ html, body {
 	padding: 3px 6px;
 }
 
-#div1 .blue {
+a.blue {
 	color: blue;
 }
 
-#div1 .red {
+a.red {
 	color: red;
 }
 
-#div1 .yellow {
+a.yellow {
 	color: yellow;
 }
 
@@ -47,12 +47,12 @@ p {
 }
 
 p a {
-	font-size: .8em;
+	font-size: .5em;
 	color: #ba0c0c;
 }
 
-p a:hover {
-	color: red;
+#div1 a:hover {
+	color: #9cffd2;
 }
 </style>
 </head>
@@ -71,7 +71,7 @@ p a:hover {
     var lastb = 1;
     var distr = true;
     var tspeed=5;//文字移动速度
-    var size=50;
+    var size=30;
 
     var mouseX=0;
     var mouseY=0;
