--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
+## layout("ulab.html",{title:"U-lab全球互联数据中心"}){
 <html lang="zh-CN">
-<head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <title>U-lab全球互联数据中心</title>
-    <link rel="stylesheet" href="${contextPath!}/static/asserts/css/bootstrap.min.css">
-    <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
-    <link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
-    <link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">
-</head>
 <body>
 <!-- <div id="mask" style="background-color: black">
          <video src="${contextPath!}/static/img/movieHead_blackBoard.mp4"  width="100%" height="100%" preload="auto" >抱歉，您的浏览器不支持video标签</video>
@@ -21,90 +13,14 @@
   
 </div>
 
-<!--屏幕描述
-一共 7x3 个屏幕，
-每一块屏幕是1920x1080
-总共的大小就是13440x3240
-3/7的宽度是5760,
-在笔记本上比例不变适应高度后，宽度为3186px
--->
 
-<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
-<script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>
 
-<script>
-    var contextPath = '${contextPath!}';
-    var bodyScale = 1;
-    function pageResize() {
-        var h = $(window).height();
-        $("#content").css("width", h * 16 * 7 / (9 * 3));
-        var bodyFontSize = h / 595 * 100 + "%";
-        bodyScale = h / 595;
-        $("body").css("font-size", bodyFontSize);
-        console.log("屏幕高度：" + h + ", body字号：" + bodyFontSize)
-    }
-    pageResize();
-</script>
-<script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
 <script src="${contextPath!}/static/asserts/echarts/wordcloudFromNet.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/common.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/statistics.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/right_statistics.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/manyEcharts.js?time=New Date()"></script>
 <!-- <script src="${contextPath!}/static/js/leftCharts.js?time=New Date()"></script> -->
-<script src="${contextPath!}/static/js/main_left.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
-<script>
-    $(function () {
-    
-        $(".tab-item").click(function () {
-            $(this).addClass("active_right").siblings().removeClass("active_right");
-            // 3. 获取到当前菜单的索引号
-            var index = $(this).index();
-            // 4. 通过索引号对应关系 让这个索引号对应的内容展示出来
-            //.selected display:flex
-            $(".box:eq(" + index + ")").addClass("selected").siblings().removeClass("selected");
-        	resetSizeRight();
-        	myChart2.resize();
-
-        });
-        $(".lab_item").click(function () {
-            $(this).addClass("word_active").siblings().removeClass("word_active");
-        	resetSizeRight();
-        	
-        });
-    });
-   
-</script>
-<script>
-    var contextPath = '${contextPath!}';
-    var myCharts;
-    var myChartFlatRT;
-    var myChartFlatRB;
-    var myChartFlatLB;
-    var pathSymbols = {
-        bar_chip: '${contextPath!}/static/img/bar_chip.png'
-    };
-    $(function () {
-        //右上角的图表
-        myChartFlatRT = echarts.init($("#l").find(".flat-right-top .myChart")[0]);
-        //平面左上的环形图
-        myChartFlatLT = echarts.init($("#l").find(".flat-left-top .myChart")[0]);
-        //右下角的图表
-//        myChartFlatRB = echarts.init($("#l").find(".flat-right-bottom .myChart")[0]);
-
-        //左下角的图表
-        myChartFlatLB = echarts.init($("#l").find(".flat-left-bottom .myChart")[0]);
-        myCharts = [myChartFlatLT, myChartFlatRT, myChartFlatLB];
-        //左侧平面地图及其他左侧数据
-        reloadLeftData();
-        //标准状态
-        standardStatus();
-        //能力状态
-        abilityStatus();
 
 
-    });
-</script>
+
+
 </body>
 </html>
+##}
