修改左边页面

--- a/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
@@ -14,21 +14,32 @@
             height: 95%;
             /*padding: 2%;*/
         }
+        button.reset{
+            float: right;
+            cursor: pointer;
+            color: #6cf;
+            font-size: .7em;
+            border: 1px solid;
+            background-color: rgba(0,0,50,.1);
+        }
     </style>
 
 </head>
 <body>
     <div id="sphereMap"></div>
-    <script>
-   
-    </script>
+    <button class="reset">点击重置</button>
+
     <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
     <script src="${contextPath!}/static/js/common.js"></script>
     <script src="${contextPath!}/static/asserts/echarts/echarts.js"></script>
     <script src="${contextPath!}/static/asserts/echarts/echarts-x.js"></script>
     <script src="${contextPath!}/static/js/sphere.js"></script>
     <script src="${contextPath!}/static/js/boot.js"></script>
+    <script>
+        $(".reset").click(function () {
 
+        })
+    </script>
 </body>
 <script>
 
