平面地图页局部改动

--- a/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
@@ -16,6 +16,7 @@
         }
         button.reset{
             float: right;
+            padding: 1px 5px 3px;
             cursor: pointer;
             color: #6cf;
             font-size: .7em;
