人员学历信息绑定数据

--- a/src/main/webapp/WEB-INF/pages/test/index.html
+++ b/src/main/webapp/WEB-INF/pages/test/index.html
@@ -9,7 +9,8 @@
 <body>
 
 	
-	<iframe id="iframe" src="http://10.130.96.27/doc/page/login.asp"></iframe>
+	<iframe width="100%" id="iframe" src="http://localhost:8080/YIJIAN/header"></iframe>
+	
 </body>
 </html>
 
