修复字符云

--- a/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
+++ b/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
@@ -280,7 +280,7 @@ p a {
                 html: items.join( "" )
             }).appendTo( "body" );
             //console.log($('div'));
- 			radius = Math.floor($("#div1").width()/3.14);
+ 			radius = Math.floor($("#div1").width()/3.14*bodyScale);
             oDiv=document.getElementById('div1');
             aA=oDiv.getElementsByTagName('a');
 
