--- a/src/main/webapp/WEB-INF/pages/test/linkEchart.html
+++ b/src/main/webapp/WEB-INF/pages/test/linkEchart.html
@@ -15,7 +15,7 @@
 				<div id="main1" style="height: 350px;width:750px;"></div>
 				<div id="main2" style="height: 350px;width:750px;"></div>
 		</div>
-		<div style="position: relative;top:20px;">
+		<div style="position: relative;top:20px;width:120px">
 			<ul id="legend_ul">
 			</ul>
 		</div>
@@ -25,7 +25,10 @@
 <script>
 importJSCSS("${contextPath!}/static/asserts/echarts3.0/echarts.js");
 /* importJSCSS("${contextPath!}/static/asserts/echarts/echarts-all.js"); */
-var colorData=['#000000','#696969','#D2691E','#7CFC00','#2E8B57','#00FFFF','#708090','#800000'];//图例颜色 需手工扩充
+var colorData=[
+               '#FF9999','#993333','#990099','#66FF66','#FFCC00','#FFFF33','#990000','#66CCFF',
+               '#3366CC','#339900','#00FF00','#FFFF00','#003300','#000066','#006666','#336699',
+               '#993333','#993399','#996600','#9966CC','#999900','#99FF00','#CC0033','#CC6600'];//图例颜色 需手工扩充
 var myChart1;
 var myChart2;
 var xData;//x轴坐标数据--对应时间
@@ -33,54 +36,78 @@ var legendData=[];//需要把全部图例放入里面 保证名称不同
 var showLegendData=[];//需要展示图例 自定义
 var seriesTopData=[];
 var seriesBottomData=[];
-var topParam=['Hz','℃','ml'];//上方y参数单位
-var bottomParam=['V','W','A','kw.h'];
+var topParam=[];//上方y参数单位
+var bottomParam=[];
+var currentData;
+var totalLegendName=[];//图例全称 包含单位 ['1:频率(Hz)','2:M1(℃)']
 var dataBase={
-		legend:['频率(Hz)','M1(℃)','M2(℃)','M3(℃)','降雨量(ml)','电流(V)','电压(A)','功率(W)'],
 		list:[
-		      {	name:'频率(Hz)',
-		    	data:[{name:'1月',value:'5'},{name:'2月',value:'6'},{name:'3月',value:'7'},{name:'4月',value:'4'},{name:'5月',value:'2'},{name:'6月',value:'25'},{name:'7月',value:'15'},{name:'8月',value:'22'},{name:'9月',value:'21'},{name:'10月',value:'7'},{name:'11月',value:'3'},{name:'12月',value:'15'} ]
+		     {	name:'1:温度(℃)',
+		    	data:[{name:'1月',value:'-55'},{name:'2月',value:'60'},{name:'3月',value:'447'},{name:'4月',value:'400'},{name:'5月',value:'200'},{name:'6月',value:'250'},{name:'7月',value:'15'},{name:'8月',value:'202'},{name:'9月',value:'21'},{name:'10月',value:'7'},{name:'11月',value:'103'},{name:'12月',value:'215'} ]
 		      },{
-		    	  name:'M1(℃)',
-		    	  data:[{name:'1月',value:'44'},{name:'2月',value:'52'},{name:'3月',value:'7'},{name:'4月',value:'1'},{name:'5月',value:'24'},{name:'6月',value:'33'},{name:'7月',value:'15'},{name:'8月',value:'22'},{name:'9月',value:'5'},{name:'10月',value:'17'},{name:'11月',value:'13'},{name:'12月',value:'5'} ] 
+		    	  name:'2:电压(V)',
+		    	  data:[{name:'1月',value:'144'},{name:'2月',value:'252'},{name:'3月',value:'227'},{name:'4月',value:'111'},{name:'5月',value:'241'},{name:'6月',value:'233'},{name:'7月',value:'105'},{name:'8月',value:'22'},{name:'9月',value:'55'},{name:'10月',value:'175'},{name:'11月',value:'153'},{name:'12月',value:'55'} ] 
 		      },{
-		    	  name:'M3(℃)',
-		    	  data:[{name:'1月',value:'24'},{name:'2月',value:'2'},{name:'3月',value:'7'},{name:'4月',value:'11'},{name:'5月',value:'54'},{name:'6月',value:'33'},{name:'7月',value:'15'},{name:'8月',value:'22'},{name:'9月',value:'5'},{name:'10月',value:'17'},{name:'11月',value:'13'},{name:'12月',value:'5'} ] 
+		    	  name:'3:电流(A)',
+		    	  data:[{name:'1月',value:'24'},{name:'2月',value:'2'},{name:'3月',value:'7'},{name:'4月',value:'11'},{name:'5月',value:'54'},{name:'6月',value:'33'},{name:'7月',value:'15'},{name:'8月',value:'22'},{name:'9月',value:'5'},{name:'10月',value:'37'},{name:'11月',value:'13'},{name:'12月',value:'45'} ] 
 		      },{
-		    	  name:'M2(℃)',
-		    	  data:[{name:'1月',value:'4'},{name:'2月',value:'2'},{name:'3月',value:'17'},{name:'4月',value:'14'},{name:'5月',value:'12'},{name:'6月',value:'15'},{name:'7月',value:'5'},{name:'8月',value:'2'},{name:'9月',value:'11'},{name:'10月',value:'17'},{name:'11月',value:'13'},{name:'12月',value:'5'} ] 
+		    	  name:'4:功率(W)',
+		    	  data:[{name:'1月',value:'4000'},{name:'2月',value:'2222'},{name:'3月',value:'1722'},{name:'4月',value:'1422'},{name:'5月',value:'1222'},{name:'6月',value:'1522'},{name:'7月',value:'5222'},{name:'8月',value:'2222'},{name:'9月',value:'1122'},{name:'10月',value:'1722'},{name:'11月',value:'1322'},{name:'12月',value:'5222'} ] 
 		      },{
-		    	  name:'降雨量(ml)',
-		    	  data:[{name:'1月',value:'14'},{name:'2月',value:'12'},{name:'3月',value:'37'},{name:'4月',value:'44'},{name:'5月',value:'52'},{name:'6月',value:'45'},{name:'7月',value:'51'},{name:'8月',value:'52'},{name:'9月',value:'41'},{name:'10月',value:'24'},{name:'11月',value:'54'},{name:'12月',value:'33'} ] 
+		    	  name:'5:耗电量(Wh)',
+		    	  data:[{name:'1月',value:'14000'},{name:'2月',value:'12000'},{name:'3月',value:'3700'},{name:'4月',value:'4400'},{name:'5月',value:'5200'},{name:'6月',value:'12500'},{name:'7月',value:'5100'},{name:'8月',value:'5002'},{name:'9月',value:'4001'},{name:'10月',value:'2004'},{name:'11月',value:'15154'},{name:'12月',value:'11133'} ] 
 		      },{
-		    	  name:'电流(V)',
-		    	  data:[{name:'1月',value:'15'},{name:'2月',value:'6'},{name:'3月',value:'7'},{name:'4月',value:'4'},{name:'5月',value:'2'},{name:'6月',value:'25'},{name:'7月',value:'15'},{name:'8月',value:'22'},{name:'9月',value:'21'},{name:'10月',value:'7'},{name:'11月',value:'3'},{name:'12月',value:'15'} ]
+		    	  name:'6:频率(Hz)',
+		    	  data:[{name:'1月',value:'15'},{name:'2月',value:'60'},{name:'3月',value:'70'},{name:'4月',value:'40'},{name:'5月',value:'20'},{name:'6月',value:'25'},{name:'7月',value:'15'},{name:'8月',value:'22'},{name:'9月',value:'71'},{name:'10月',value:'56'},{name:'11月',value:'43'},{name:'12月',value:'95'} ]
 		      },{
-		    	  name:'电压(A)',
-		    	  data:[{name:'1月',value:'4'},{name:'2月',value:'2'},{name:'3月',value:'17'},{name:'4月',value:'14'},{name:'5月',value:'12'},{name:'6月',value:'15'},{name:'7月',value:'5'},{name:'8月',value:'2'},{name:'9月',value:'11'},{name:'10月',value:'17'},{name:'11月',value:'13'},{name:'12月',value:'5'} ]
+		    	  name:'7:功率因数(PF)',
+		    	  data:[{name:'1月',value:'40'},{name:'2月',value:'20'},{name:'3月',value:'17'},{name:'4月',value:'34'},{name:'5月',value:'12'},{name:'6月',value:'65'},{name:'7月',value:'45'},{name:'8月',value:'2'},{name:'9月',value:'71'},{name:'10月',value:'27'},{name:'11月',value:'13'},{name:'12月',value:'65'} ]
 		      },{
-		    	  name:'功率(W)',
-		    	  data:[{name:'1月',value:'14'},{name:'2月',value:'112'},{name:'3月',value:'57'},{name:'4月',value:'14'},{name:'5月',value:'12'},{name:'6月',value:'15'},{name:'7月',value:'5'},{name:'8月',value:'2'},{name:'9月',value:'11'},{name:'10月',value:'17'},{name:'11月',value:'13'},{name:'12月',value:'5'} ]
+		    	  name:'9:压力(kpa)',
+		    	  data:[{name:'1月',value:'-74'},{name:'2月',value:'82'},{name:'3月',value:'57'},{name:'4月',value:'14'},{name:'5月',value:'12'},{name:'6月',value:'15'},{name:'7月',value:'5'},{name:'8月',value:'2'},{name:'9月',value:'-11'},{name:'10月',value:'67'},{name:'11月',value:'-43'},{name:'12月',value:'50'} ]
+		      },{
+		    	  name:'10:转速(r/min)',
+		    	  data:[{name:'1月',value:'100'},{name:'2月',value:'10'},{name:'3月',value:'2700'},{name:'4月',value:'1400'},{name:'5月',value:'-2212'},{name:'6月',value:'1500'},{name:'7月',value:'522'},{name:'8月',value:'2254'},{name:'9月',value:'1100'},{name:'10月',value:'1527'},{name:'11月',value:'1333'},{name:'12月',value:'500'} ]
+		      },{
+		    	  name:'11:瞬时流量(L/min)',
+		    	  data:[{name:'1月',value:'11'},{name:'2月',value:'80'},{name:'3月',value:'77'},{name:'4月',value:'44'},{name:'5月',value:'55'},{name:'6月',value:'15'},{name:'7月',value:'5'},{name:'8月',value:'20'},{name:'9月',value:'91'},{name:'10月',value:'77'},{name:'11月',value:'13'},{name:'12月',value:'50'} ]
 		      }
 		      ]
 };
 
 $(document).ready(function() { 
-	legendData=dealBracket(dataBase.legend);
-	showLegendData=legendData;//默认全选
-	//console.log(showLegendData)
-	createLegendHtmls();
-	createEcharts();
-	
+	findSensorByLabCenetrTabAjax("HaierWasher20151222","1");
 });
+function findSensorByLabCenetrTabAjax(labTypeCode,testUnitId){
+	$.post("${contextPath}/lab/findSensorByLabCenetrTabAjax",{"labTypeCode":labTypeCode,"testUnitId":testUnitId},function(data){
+		currentData=data;
+		$.each(data,function(index,item){
+			totalLegendName.push(item.legend);
+			if(index<4){
+				topParam.push(item.unit);
+			}else if(index>=4&&index<8){
+				bottomParam.push(item.unit);
+			}
+		});
+		legendData=dealBracket(totalLegendName);
+		showLegendData=legendData;//默认全选
+		createLegendHtmls();
+		createEcharts(true);
+	});
+}
 //生成echarts图形
-function createEcharts(){
-	dealSeriesData();
+function createEcharts(isFirst,obj){
+	if(isFirst){
+		dealSeriesData();
+	}else{
+		dealSeriesData2(obj);
+	}
 	myChart1= echarts.init(document.getElementById('main1'));
 	myChart2 = echarts.init(document.getElementById('main2'));
 	getCharts1();	
 	getCharts2();	
 }
+
 //生成图例控制
 function createLegendHtmls(){
 	var htmls='';
@@ -89,29 +116,68 @@ function createLegendHtmls(){
 	}
 	$("#legend_ul").html(htmls);
 }
-
 //处理线series
 function dealSeriesData(){
 	seriesTopData=[];
 	seriesBottomData=[];
-	for(var x=0;x<dataBase.legend.length;x++){
-		var currentName=dataBase.legend[x];
+	for(var x=0;x<totalLegendName.length;x++){
+		var currentName=totalLegendName[x];
 		var data=[];
 		for(var i=0;i<dataBase.list.length;i++){
 			if(dataBase.list[i].name==currentName){
 				data=dataBase.list[i].data;
 			}
-		}
+		};
 		var topIndex=isHasElementOne(topParam,dealUnit(currentName));
 		var bottomIndex=isHasElementOne(bottomParam,dealUnit(currentName));
-		if(topIndex>-1&&isHasElementOne(showLegendData,dealBracketForObj(currentName))>-1){
-			//展示在上半部分
-			seriesTopData.push(joinSerise(data,currentName,topIndex,x));
-		}else if(bottomIndex>-1&&isHasElementOne(showLegendData,dealBracketForObj(currentName))>-1){
-			//展示在下半部分
-			seriesBottomData.push(joinSerise(data,currentName,bottomIndex,x));
+		if(topIndex>-1||bottomIndex>-1){
+			if(topIndex>-1&&isHasElementOne(showLegendData,dealBracketForObj(currentName))>-1){
+				//展示在上半部分
+				seriesTopData.push(joinSerise(data,currentName,topIndex,x));
+			}else if(bottomIndex>-1&&isHasElementOne(showLegendData,dealBracketForObj(currentName))>-1){
+				//展示在下半部分
+				seriesBottomData.push(joinSerise(data,currentName,bottomIndex,x));
+			}
+		}else{
+			//没有配置 默认画到左下
+			seriesBottomData.push(joinSeriseOther(data,currentName,x));
 		}
-		//console.log(currentName+"==="+topIndex+"==="+bottomIndex)
+	}
+};
+//处理线series
+function dealSeriesData2(obj){
+	seriesTopData=[];
+	seriesBottomData=[];
+	for(var x=0;x<totalLegendName.length;x++){
+		var currentName=totalLegendName[x];
+		var data=[];
+		for(var i=0;i<dataBase.list.length;i++){
+			if(dataBase.list[i].name==currentName){
+				data=dataBase.list[i].data;
+			}
+		};
+		var topIndex=isHasElementOne(topParam,dealUnit(currentName));
+		var bottomIndex=isHasElementOne(bottomParam,dealUnit(currentName));
+		if(topIndex>-1||bottomIndex>-1){
+			if(topIndex>-1&&isHasElementOne(showLegendData,dealBracketForObj(currentName))>-1){
+				//展示在上半部分
+				seriesTopData.push(joinSerise(data,currentName,topIndex,x));
+			}else if(bottomIndex>-1&&isHasElementOne(showLegendData,dealBracketForObj(currentName))>-1){
+				//展示在下半部分
+				seriesBottomData.push(joinSerise(data,currentName,bottomIndex,x));
+			}
+		}else{
+			//没有配置 默认画到左下
+			var checked=false;
+			$('input[name="legendcheckbox"]:checked').each(function(){ 
+				if($(this).val()==dealBracketForObj(currentName)){
+					checked=true;
+				}; 
+			});  
+			if(checked){
+				seriesBottomData.push(joinSeriseOther(data,currentName,x));
+			};
+		}
 	}
 };
 function joinSerise(data,name,index,colorIndex){
@@ -137,7 +203,27 @@ function joinSerise(data,name,index,colorIndex){
 	}
 	return item;
 }
-
+function joinSeriseOther(data,name,colorIndex){
+	var dataArr=[];
+	xData=[];
+	for(var x=0;x<data.length;x++){
+		dataArr.push(data[x].value);
+		xData.push(data[x].name);
+	};
+	var item= {
+	            name:dealBracketForObj(name),
+ 	            type:'line',
+ 	            data:dataArr,
+ 	            itemStyle:{
+ 	        	  normal:{
+ 	        		  color:colorData[colorIndex]
+ 	        	  }
+ 	           },
+ 	           show:false
+ 	        };
+	//item.yAxisIndex=1;
+	return item;
+}
 function getCharts1(){
 	option = {
 	    tooltip: {
@@ -173,7 +259,9 @@ function getCharts1(){
 	    yAxis: [
 	            {
 		            type: 'value',
-		            name: 'Hz',
+		            name: currentData[0].unit,
+		            max:currentData[0].highvalue,
+		            min:currentData[0].lowvalue,
 		            position: 'left',
 		            offset: 40,
 		            axisLabel: {
@@ -182,7 +270,9 @@ function getCharts1(){
 		        },
 		        {
 		            type: 'value',
-		            name: '℃',
+		            name: currentData[1].unit,
+		            max:currentData[1].highvalue,
+		            min:currentData[1].lowvalue,
 		            position: 'left',
 		            axisLabel: {
 		                formatter: '{value} '
@@ -190,7 +280,20 @@ function getCharts1(){
 		        },
 	        {
 	            type: 'value',
-	            name: 'ml',
+	            name: currentData[2].unit,
+	            max:currentData[2].highvalue,
+	            min:currentData[2].lowvalue,
+	            position: 'right',
+	            axisLabel: {
+	                formatter: '{value}'
+	            }
+	        },
+	        {
+	            type: 'value',
+	            offset: 40,
+	            name: currentData[3].unit,
+	            max:currentData[3].highvalue,
+	            min:currentData[3].lowvalue,
 	            position: 'right',
 	            axisLabel: {
 	                formatter: '{value}'
@@ -240,10 +343,10 @@ function getCharts2(){
 	    yAxis: [
 	            {
 		            type: 'value',
-		            name: 'V',
+		            name: currentData[4].unit,
+		            max:currentData[4].highvalue,
+		            min:currentData[4].lowvalue,
 		            nameLocation:'start',
-		       /*      min: 0,
-		            max: 100, */
 		            position: 'left',
 		            offset: 40,
 		            axisLabel: {
@@ -258,7 +361,9 @@ function getCharts2(){
 		        },
 		        {
 		            type: 'value',
-		            name: 'W',
+		            name: currentData[5].unit,
+		            max:currentData[5].highvalue,
+		            min:currentData[5].lowvalue,
 		            nameLocation:'start',
 		            position: 'left',
 		            axisLabel: {
@@ -267,7 +372,9 @@ function getCharts2(){
 		        },
 	        {
 	            type: 'value',
-	            name: 'A',
+	            name: currentData[6].unit,
+	            max:currentData[6].highvalue,
+	            min:currentData[6].lowvalue,
 	            nameLocation:'start',
 	            position: 'right',
 	            axisLabel: {
@@ -276,7 +383,9 @@ function getCharts2(){
 	        },
 	        {
 	            type: 'value',
-	            name: 'kw.h',
+	            name: currentData[7].unit,
+	            max:currentData[7].highvalue,
+	            min:currentData[7].lowvalue,
 	            nameLocation:'start',
 	            position: 'right',
 	            offset: 40,
@@ -332,12 +441,12 @@ function dealUnit(str){
 }
 function resetOptions(obj){
 	showLegendData=checkBoxVales();
-	createEcharts();
+	createEcharts(false,obj);
 }
 function checkBoxVales(){ //jquery获取复选框值 
 	var chk_value =[]; 
 	$('input[name="legendcheckbox"]:checked').each(function(){ 
-	chk_value.push($(this).val()); 
+		chk_value.push($(this).val()); 
 	}); 
 	return chk_value;
 } 
